src/test/deca/syntax/valid/SansObjet/IneqExpr-Mix.deca
// Description:
//    Multiple comparison expressions.
//
// Results:
//    (void)
//
// Historique:
//    cree le 09/01/2022

{
        v > w < x >= y <= z;
}
