src/test/deca/syntax/invalid/SansObjet/Large-FloatLiteral.deca
// Description:
//    Declaration of a float variable using a very large float literal
// 
// Results:
//     Parsing error line 11
// 
// Historique: 
//    cree le 19/01/2022

{
  float x =  999999999999999999999999999999999999999999999999999999999999999999999999999999999999999.9999999999999999999999999999999999999999999999999999999999999999999999;
  print(x);
}
